<resources>
    <string name="app_name">CS2102</string>
    <string name="title_activity_login">Pet Care Service</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="errorText">An error has occurred while loading the data.</string>
    <string name="select_dates">Select date range</string>

    <string-array name="user_selection">
        <item>petowner</item>
        <item>caretaker</item>
        <item>admin</item>
    </string-array>

    <string-array name="payment_selection">
        <item>creditcard</item>
        <item>cash</item>
    </string-array>

    <string-array name="transfer_types">
        <item>PCS Building</item>
        <item>CareTaker PickUp</item>
        <item>Owner Delivery</item>
    </string-array>

    <string-array name="user_rating">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>


    <string name="pet_owner">Pet Owner</string>
    <string name="care_taker">Care Taker</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="enter_your_pet_s_name">Enter your pet\'s name</string>
    <string name="enter_your_pet_s_type">Enter your pet\'s type</string>
    <string name="enter_your_number">Enter your number</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="confirm">Confirm</string>
    <string name="contract">State contract</string>
    <string name="leaves">Leaves</string>
    <string name="bids">Bids</string>
    <string name="prices">Prices</string>
    <string name="accept_bid">Accept Bid</string>
    <string name="select_date">Select Date</string>
    <string name="availability">Avail</string>
    <string name="tell_us_about_you">Tell us about you</string>
    <string name="enter_your_bank_account_number">Enter your bank account number</string>
    <string name="enter_your_credit_card_number">Enter your credit card number</string>
    <string name="enter_referral">Enter referral</string>
    <string name="full_time">Full-Time</string>
    <string name="you_currently_have_no_bids">You currently have no bids</string>
    <string name="reject_bid">Reject Bid</string>
    <string name="you_currently_have_no_categories_set">You currently have no categories set</string>
    <string name="set">Set</string>
    <string name="add">Add</string>
    <string name="add_category">Add category</string>
    <string name="this_date_has_already_been_chosen">This date has already been chosen</string>
    <string name="del">del</string>
    <string name="listings">Listings</string>
    <string name="pets">Pets</string>
    <string name="ongoing">Ongoing</string>
    <string name="review">review</string>
    <string name="set_date_range">Set date range</string>
    <string name="search">Search</string>
    <string name="no_listings_available_for_selection">No listings available for selection</string>
    <string name="you_currently_have_no_pets">You currently have no pets</string>
    <string name="submit_bid">Submit Bid</string>
    <string name="add_pet">Add pet</string>
    <string name="delete_pet">Delete pet</string>
    <string name="pet_name">pet name</string>
    <string name="profile">profile</string>
    <string name="requests">requests</string>
    <string name="to_add_fill_in_all_entries_nto_modify_same_but_with_target_name_type_nto_delete_fill_in_name">To add, fill in all entries \nTo modify, same but with target name + type \nTo delete, fill in name</string>
    <string name="edit_pet">Edit pet</string>
    <string name="sign_in">Sign in</string>
    <string name="pick_dates">Pick Dates</string>
    <string name="payment_type">Payment type:</string>
    <string name="pet">Pet:</string>
    <string name="price_config">Price Config</string>
    <string name="caretakers">CareTakers</string>
    <string name="ct">CT</string>
    <string name="salary">Salary</string>
    <string name="ratings">Ratings</string>
    <string name="add_new_category">Add new category: </string>
    <string name="delete_category">Delete category:</string>
    <string name="select_a_pet">Select a pet</string>
    <string name="pending">Pending</string>
    <string name="successful">Successful</string>
    <string name="have_you_paid">Have you paid?</string>
    <string name="rating">Rating:</string>
    <string name="submit">Submit</string>
    <string name="transfer_type">Transfer type</string>
    <string name="both">both</string>
    <string name="delete_account">Delete account</string>
    <string name="existing">Existing:</string>
    <string name="pet_type">Pet type</string>
    <string name="modify_price">Modify price:</string>
    <string name="new_price">New price</string>
    <string name="there_is_nothing_to_view">There is nothing to view</string>
    <string name="picking_any_day_will_search_salaries_by_the_month">Picking any day will search salaries by the month</string>
    <string name="statistics_for_the_month_will_be_shown">Statistics for the month will be shown</string>
    <string name="note_that_only_salaries_before_current_month_will_be_shown">Note that only salaries before current month will be shown</string>
    <string name="bid_price">Bid price</string>
    <string name="transfer_type_1">Transfer type:</string>
    <string name="performance">Performance</string>
    <string name="picking_any_day_will_show_performances_of_cts_for_the_month">Picking any day will show performances of CTs for the month</string>
    <string name="note_that_only_information_before_the_current_month_is_available">Note that only information before the current month is available</string>
    <string name="finances">Finances</string>
    <string name="accepted">accepted</string>
    <string name="processed">Processed</string>

</resources>