<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="11"
        tools:context=".view.registerView.CareTakerSignUpFragment">

        <EditText
            android:id="@+id/username"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:minWidth="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="@string/prompt_username"
            android:hint="@string/prompt_username"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/password"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:minWidth="150dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="@string/prompt_password"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/email"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:minWidth="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_your_email"
            android:autofillHints="@string/enter_your_email"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/number"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:minWidth="150dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:inputType="number"
            android:hint="@string/enter_your_number"
            android:autofillHints="@string/enter_your_number"
            android:selectAllOnFocus="true" />

        <EditText
            android:layout_weight="1"
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:inputType="text"
            android:minWidth="150dp"
            android:hint="@string/enter_your_address"
            android:autofillHints="@string/enter_your_address"
            android:selectAllOnFocus="true" />

        <EditText
            android:layout_weight="1"
            android:id="@+id/creditCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:minWidth="150dp"
            android:layout_marginEnd="24dp"
            android:inputType="number"
            android:hint="@string/enter_your_credit_card_number"
            android:autofillHints="@string/enter_your_credit_card_number"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/bankAcc"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:minWidth="150dp"
            android:layout_marginEnd="24dp"
            android:inputType="number"
            android:hint="@string/enter_your_bank_account_number"
            android:autofillHints="@string/enter_your_bank_account_number"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/profile"
            android:minWidth="150dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:inputType="text"
            android:hint="@string/tell_us_about_you"
            android:autofillHints="@string/tell_us_about_you"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/referral"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:minWidth="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:inputType="text"
            android:hint="@string/enter_referral"
            android:autofillHints="@string/enter_referral"
            android:selectAllOnFocus="true" />

        <Switch
            android:id="@+id/isFT"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/full_time"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:layout_weight="1"
            android:id="@+id/register_CT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register" />
        
        <Space
            android:layout_width="match_parent"
            android:layout_height="400dp" />

    </LinearLayout>
</ScrollView>
